@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2011/04/22 13:42:13 obache Exp $
+# $NetBSD: Makefile,v 1.13 2011/06/05 00:43:24 schnoebe Exp $
 #
 
-DISTNAME=	libgsf-1.14.20
+DISTNAME=	libgsf-1.14.21
 PKGNAME=	${DISTNAME:S/libgsf/libgsf-gnome/}
-PKGREVISION=	1
 CATEGORIES=	devel gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libgsf/1.14/}
 EXTRACT_SUFX=	.tar.bz2
